Adicionando controller and model  for user in mongodb

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=3001
+MONGO_USER:admin
+MONGO_PASSWORD:YPj0oARVTnUvoyIx
+MONGO_URI:mongodb+srv://admin:YPj0oARVTnUvoyIx@cluster0.lmblx.mongodb.net/Innovation-game?retryWrites=true&w=majority
