[UPDATE] Updating the inital setup

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
         "react"
     ],
     "rules": {
+        "react/jsx-props-no-spreading":"off",
         "no-console": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "react/prefer-stateless-function": 0,
