--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongodb": "^3.6.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
