--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
         "react/prefer-stateless-function": 0,
         "react/prop-types": 0,
         "object-curly-newline": ["error", { "multiline": true }],
-        "arrow-parens": [2, "always"]
+        "arrow-parens": [2, "always"],
+        "camelcase":"off"
       }
 }
