--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
+    "pagarme": "^4.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
