--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.739.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint": "^7.7.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
